@@ -43,6 +43,9 @@ Trunk (not yet released)
     AVRO-1228. Java: Fix Trevni to use default values for missing Avro fields.
     (cutting)
 
+    AVRO-1240. Java: Fix SpecificDatumReader(Class) constructor to use
+    correct ClassLoader. (cutting)
+
 Avro 1.7.3 (6 December 2012)
 
   NEW FEATURES
